# paper-collect

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html
examples/ai-agents-demo/: review.html  run_meta.json
examples/ai-agents-demo/stage-03/: queries.json  search_intents.json  search_plan.yaml  sources.json
examples/ai-agents-demo/stage-04/: candidates.jsonl  match_ledger.jsonl  references.bib  search_meta.json
examples/ai-agents-demo/stage-05/: references_verified.bib  verification_report.json
scripts/: render_provider_registry_review.py  render_topic_search_review.py
src/paper_collect/: __init__.py  cli.py  provider_registry.py  topic_search.py
src/paper_collect/literature/: __init__.py  arxiv_client.py  crossref_client.py  dblp_client.py  doaj_client.py  errors.py  models.py  openalex_client.py  pubmed_client.py  search.py  semantic_scholar.py  verify.py
tests/: test_literature_search.py  test_literature_verification.py  test_provider_registry.py  test_topic_intent_stage01.py  test_topic_profile_stage02.py  test_topic_search_quality_phase1.py  test_topic_search_runtime.py  topic_intent_helpers.py
